# StickWithIt

./: CMakeLists.txt  LICENSE  README.md
Projektarbeit2Godot/: Player.tscn  project.godot
assets/graphics/enemies/mushroom/: mushroom_walking_animation_back.json  mushroom_walking_animation_front.json  mushroom_walking_animation_right_side.json  mushroom_walking_animation_side.json
assets/graphics/helfer/: all animation fly.json
assets/graphics/interface/: big_button.json
assets/graphics/pcs/: fly_animations.json
assets/graphics/player/: all_animation_sense.json  fightanimation_sense_down.json  fightanimation_sense_left.json  fightanimation_sense_right.json  fightanimation_sense_up.json  scarecrow_idle_animation.json  scarecrow_idle_animation_back.json  scarecrow_idle_animation_left.json  scarecrow_idle_animation_right.json  sprunganimation.json
assets/graphics/tilemaps/: level1.tmj  level2.tmj  level3.tmj  level4.tmj  map_prototyp.tmj  map_prototyp2.tmj  map_protoype_silas.tmj  map_protoype_silas2.tmj  tilemap_level1.tmj  tilemap_level2.tmj  tileset.tsx
assets/graphics/tilesets/: tileset1.json
assets/graphics/ui/: big_button_animation.json  butoon.json  button.json  button_animation_sheet.json  exit_animation.json  exit_button.json  options_animation.json  options_button.json  start_animation.json  start_button.json  startscreen_sheet.json  weiß_exit_button.json  weiß_options_button.json  weiß_start_button.json
assets/graphics/ui/Options/: balken_25%.json  balken_50%.json  balken_75%.json  balken_voll.json  fullscreen.json  fullscreen_kreuz.json  kreuz_rahmen.json  minus.json  options_background.json  plus.json  rahmen mit kreuz.json  sound_0.json  sound_100.json  sound_25.json  sound_50.json  sound_75.json  sound_text.json  text_fullscreen.json  text_sound.json  tonbalken.json
src/: CMakeLists.txt  config.h  config.h.in  gamestate.cpp  gamestate.h  main.cpp  note  savegame.txt
src/actors/: actor.cpp  actor.h  actors.h  spawner.cpp  spawner.h  state.cpp  state.h
src/actors/components/: all_components.h  animation_player.cpp  animation_player.h  pathfinder.cpp  pathfinder.h  sprite.cpp  sprite.h
src/actors/components/weapons/: pitchfork.cpp  pitchfork.h  scythe.cpp  scythe.h  shovel.cpp  shovel.h  weapon.cpp  weapon.h  weapons.h
src/actors/enemies/: bat.cpp  bat.h  bird.cpp  bird.h  boar.cpp  boar.h  enemy.cpp  enemy.h  mushroom.cpp  mushroom.h  spider.cpp  spider.h
src/actors/players/: fly.cpp  fly.h  player.cpp  player.h  scarecrow.cpp  scarecrow.h
src/core/: CMakeLists.txt  actor.cpp  actor.h  boar.cpp  boar.h  enemy.cpp  enemy.h  game.cpp  information.h  level.cpp  level.h  mushroom.cpp  mushroom.h  player.cpp  player.h  sprite_information.h  stage.cpp  tilesetter.cpp  tilesetter.h
src/extras/: headers.h  textures.h  typedefs.h
src/handlers/: animation_handler.cpp  animation_handler.h  animation_player.cpp  animation_player.h  collision_handler.h  levelDrawer.cpp  levelDrawer.h  level_drawer.cpp  level_drawer.h  level_handler.cpp  level_handler.h  pathfinder.cpp  pathfinder.h  pathfinder_test.h
src/levels/: level.cpp  level.h  level_1.cpp  level_1.h  level_2.cpp  level_2.h  level_3.cpp  level_3.h  level_4.cpp  level_4.h  level_handler.cpp  level_handler.h  levels.h  map.cpp  map.h
src/objects/: npc.cpp  npc.h  object.cpp  object.h  objects.h  pc.cpp  pc.h
src/objects/npcs/: bat.cpp  bat.h  bird.cpp  bird.h  mushroom.cpp  mushroom.h
src/objects/pcs/: fly.cpp  fly.h  scarecrow.cpp  scarecrow.h
src/objects/playerCharacters/: player_character.cpp  player_character.h  scarecrow.cpp  scarecrow.h
src/objects/player_characters/: player_character.cpp  player_character.h  scarecrow.cpp  scarecrow.h
src/scenes/: button.cpp  button.h  gameScene.cpp  gameScene.h  game_scene.cpp  game_scene.h  menuScene.cpp  menuScene.h  menu_scene.cpp  menu_scene.h  scene.cpp  scene.h  scene_game.cpp  scene_game.h  scene_menu.cpp  scene_menu.h  scenes.h
src/scenes/windows/: pause_window.cpp  pause_window.h  settings_window.cpp  settings_window.h  skilltree_window.cpp  skilltree_window.h  window.cpp  window.h  window_blend_out.cpp  window_blend_out.h  window_credits.cpp  window_credits.h  window_game_over.cpp  window_game_over.h  window_game_won.cpp  window_game_won.h  window_next_level.cpp  window_next_level.h  window_pause.cpp  window_pause.h  window_settings.cpp  window_settings.h  window_skilltree.cpp  window_skilltree.h  windows.h
src/scenes/windows/skilltrees/: tree.cpp  tree.h  tree_pitchfork.cpp  tree_pitchfork.h  tree_scythe.cpp  tree_scythe.h  tree_shovel.cpp  tree_shovel.h  trees.h  upgrade.cpp  upgrade.h
